@@ -1,5 +1,97 @@
 
-<div>
-  <h1>Layout Sidemenu</h1>
-  <ng-content></ng-content>
-</div>
+<ion-app >
+  <div >
+    <ion-menu>
+      <ion-header>
+        <ion-toolbar color="primary">
+          <ion-title>Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+
+      <ion-content>
+        <ion-list>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item button (click)="navigate('homefeed')" >
+              <ion-icon slot="start" name='paper'></ion-icon>
+              <ion-label>
+                Homefeed
+              </ion-label>
+            </ion-item>
+            <ion-item button (click)="navigate('newsfeed')" >
+              <ion-icon slot="start" name='paper'></ion-icon>
+              <ion-label>
+                My Newsfeed
+              </ion-label>
+            </ion-item>
+            <ion-item button (click)="navigate('en/cities')">
+              <ion-icon slot="start" name='bus'></ion-icon>
+              <ion-label>
+                Cities
+              </ion-label>
+            </ion-item>
+            <ion-item button (click)="navigate('maps')">
+              <ion-icon slot="start" name='bus'></ion-icon>
+              <ion-label>
+                Fighters Guild
+              </ion-label>
+            </ion-item>
+
+            <ion-item *ngIf="currentUser" button (click)="navigate('account')">
+              <ion-icon slot="start" name='person'></ion-icon>
+              <ion-label>
+                My Account
+              </ion-label>
+            </ion-item>
+            <!-- <ion-item *ngIf="currentUser" button (click)="doFacebookLogout()">
+              <ion-icon slot="start" name='power'></ion-icon>
+              <ion-label>
+                Logout
+              </ion-label>
+            </ion-item> -->
+            <ion-item *ngIf="!currentUser" button (click)="doFacebookLogin()">
+              <ion-icon slot="start" name='power'></ion-icon>
+              <ion-label>
+                Login
+              </ion-label>
+            </ion-item>
+            
+          </ion-menu-toggle>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+
+    <ion-content class="ion-page" main>
+      <ion-header>
+        <ion-toolbar>
+          <ion-buttons slot="start">
+            <ion-menu-toggle>
+              <ion-button>
+                <ion-icon slot="icon-only" name="menu"></ion-icon>
+              </ion-button>
+            </ion-menu-toggle>
+          </ion-buttons>
+          <ion-title>{{ mainTitle }}</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <!-- <ion-router-outlet [swipeGesture]="false"></ion-router-outlet> -->
+        <ng-content></ng-content>
+      </ion-content>
+    </ion-content>
+  </div>
+
+  <div id="mainFooterWrapper" [class]="mainFooterVisible" >
+    <div id='bugBtn' (click)="toggleMainFooter()" >
+      <img src="assets/icons/bug.png" />
+    </div>
+    <div id="mainFooterContent" >
+      <ul>
+        <li>0.1.2b :: {{ currentUserStr }}</li>
+        <li>Env :: {{ env }}</li>
+        <li>Platformlist :: {{ platformList }}</li>
+      </ul>
+    </div>
+  </div>
+
+</ion-app>
+
