@@ -1,21 +1,22 @@
 
-<layout-sidemenu>
-  <ion-content class='reports-show' >
-
-    <ion-grid>
-      <ion-row>
-        <ion-col size-md="6" push-md="3" size-sm="12" >
-          <ion-card padding >
-            <h1>{{ report.name }}</h1>
-            <p><i>{{ report.subtitle }}</i></p>
-            <div [innerHTML]=report.description ></div>
-          </ion-card>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-
+<ion-content>
+  <layout-sidemenu>
+  
+    <div class='reports-show'>
+      <ion-grid>
+        <ion-row>
+          <ion-col size-md="6" push-md="3" size-sm="12" >
+            <ion-card padding >
+              <h1>{{ report.name }}</h1>
+              <p><i>{{ report.subtitle }}</i></p>
+              <div [innerHTML]=report.description ></div>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
     <br /><br /><br />
     <br /><br /><br />
-
-  </ion-content>
-</layout-sidemenu>
+  
+  </layout-sidemenu>
+</ion-content>
